; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/procstat/extr_procstat.c_cmdopt_signals.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/procstat/extr_procstat.c_cmdopt_signals.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"n\00", align 1
@PS_OPT_SIGNUM = common dso_local global i32 0, align 4
@procstat_opts = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cmdopt_signals(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  br label %6

6:                                                ; preds = %20, %2
  %7 = load i32, i32* %3, align 4
  %8 = load i8**, i8*** %4, align 8
  %9 = call i32 @getopt(i32 %7, i8** %8, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32 %9, i32* %5, align 4
  %10 = icmp ne i32 %9, -1
  br i1 %10, label %11, label %21

11:                                               ; preds = %6
  %12 = load i32, i32* %5, align 4
  switch i32 %12, label %18 [
    i32 110, label %13
    i32 63, label %17
  ]

13:                                               ; preds = %11
  %14 = load i32, i32* @PS_OPT_SIGNUM, align 4
  %15 = load i32, i32* @procstat_opts, align 4
  %16 = or i32 %15, %14
  store i32 %16, i32* @procstat_opts, align 4
  br label %20

17:                                               ; preds = %11
  br label %18

18:                                               ; preds = %11, %17
  %19 = call i32 (...) @usage()
  br label %20

20:                                               ; preds = %18, %13
  br label %6

21:                                               ; preds = %6
  ret void
}

declare dso_local i32 @getopt(i32, i8**, i8*) #1

declare dso_local i32 @usage(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
